GDB-13631 fix visualization graph labels on Firefox
## What
Fix visualization graph labels to ensure proper display on Firefox.

## Why
It wasn't centered. Also, the content wasn't clamped when it overflowed

## How
- Removed the extra `div`, which was making it more difficult to style the label.
- Moved the clamping to be inside the `div` in which the label is, instead of the parent

## Testing
n/a

--- a/packages/legacy-workbench/src/css/graphs-vizualizations.css
+++ b/packages/legacy-workbench/src/css/graphs-vizualizations.css
@@ -126,11 +126,6 @@
     z-index: 10;
 }
 
-g > foreignObject {
-    align-content: center;
-    overflow: visible;
-}
-
 .truncated-label {
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -140,12 +135,10 @@ g > foreignObject {
 
 .node-label-body {
     font-weight: 300;
-}
-
-.node-label-body div {
     word-break: break-all;
-    margin: auto;
     text-align: center;
+    height: 100%;
+    align-content: center;
 }
 
 .node-wrapper .pinned {
